fix double scroll problem

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -74,6 +74,7 @@ html {
 body {
   /* set the box size in all elements to border-box thanks to *{} */
   box-sizing: border-box;
+  overflow: hidden;
 
   @include respond(tab-port) {
     // padding: 0;
